--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>YOUR NAME</title>
+    <title>Ivan Reams</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
+      <a href="firstgame.html">This is my first game</a>
+      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    
     </div>
   </body>
 </html>
