--- a/html/CS160.html
+++ b/html/CS160.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css\screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <a href="index.html">Home</a>
-      <a href="firstgame.html">This is my first game</a>
+      <a href="html\index.html">Home</a>
+      <a href="html\firstgame.html">This is my first game</a>
     </div>
   </body>
 </html>
