--- a/html/CS160.html
+++ b/html/CS160.html
@@ -9,7 +9,7 @@
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <a href="index.html">Home</a>
-      <a href="html\firstgame.html">This is my first game</a>
+      <a href="firstgame.html">This is my first game</a>
     </div>
   </body>
 </html>
