--- a/html/CS160.html
+++ b/html/CS160.html
@@ -8,8 +8,8 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <a href="html/index.html">Home</a>
-      <a href="html/firstgame.html">This is my first game</a>
+      <a href="index.html">Home</a>
+      <a href="firstgame.html">This is my first game</a>
     </div>
   </body>
 </html>
