--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
-      <a href="html/CS160.html">CS160</a>
+      <a href="CS160.html">CS160</a>
     </div>
   </body>
 </html>
