--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
-      <a href="CS160.html">CS160</a>
+      <a href="html/CS160.html">CS160</a>
     </div>
   </body>
 </html>
