--- a/html/CS160.html
+++ b/html/CS160.html
@@ -8,7 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <a href="html\index.html">Home</a>
+      <a href="html/index.html">Home</a>
       <a href="firstgame.html">This is my first game</a>
     </div>
   </body>
