add second game

--- a/html/CS160.html
+++ b/html/CS160.html
@@ -5,11 +5,12 @@
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
-  <body class="index">
+  <body class="cs160">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <a href="html/index.html">Home</a>
       <a href="firstgame.html">This is my first game</a>
+      <a href="hmlt/shark.html">Sharks and Minnow</a>
     </div>
   </body>
 </html>
