--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
       <a href="html/CS160.html">CS160</a>
+      <a href="hmlt/shark.html">Sharks and Minnow</a>
     </div>
   </body>
 </html>
