--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,8 @@
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
-      <a href="html/CS160.html">CS160</a>
+      <a href="html/CS160.html">CS160</a><br>
+      <a href="html/firstgame.html">This is my first game</a><br>
       <a href="hmlt/shark.html">Sharks and Minnow</a>
     </div>
   </body>
