--- a/html/shark.html
+++ b/html/shark.html
@@ -7,8 +7,9 @@
   </head>
   <body class="shark">
        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250464143/?autostart=false" frameborder="0" allowfullscreen></iframe>
-       <a href="html/index.html">Home</a>
-       <a href="html/firstgame.html">This is my first game</a>
+       <br>
+       <a href="html/index.html">Home</a><br>
+       <a href="html/firstgame.html">This is my first game</a><br>
        <a href="html/CS160.html">CS160</a>
   </body>
 </html>    
