--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
       <a href="html/CS160.html">CS160</a><br>
-      <a href="html/firstgame.html">This is my first game</a><br>
+      <a href="firstgame.html">This is my first game</a><br>
       <a href="html/shark.html">Sharks and Minnow</a>
     </div>
   </body>
