--- a/html/CS160.html
+++ b/html/CS160.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
   <body class="cs160">
