--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p>
-      
+      <a href="CS160.html">CS160</a><br>
       <a href="firstgame.html">This is my first game</a><br>
-      <a href="html/shark.html">Sharks and Minnow</a>
+      <a href="shakk.html">Sharks and Minnow</a>
     </div>
   </body>
 </html>
