--- a/html/CS160.html
+++ b/html/CS160.html
@@ -8,9 +8,9 @@
   <body class="cs160">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <a href="html/index.html">Home</a>
-      <a href="firstgame.html">This is my first game</a>
-      <a href="hmlt/shark.html">Sharks and Minnow</a>
+      <a href="index.html">Home</a><br>
+      <a href="firstgame.html">This is my first game</a><br>
+      <a href="shark.html">Sharks and Minnow</a>
     </div>
   </body>
 </html>
