--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -7,7 +7,7 @@
   </head>
   <body class="game">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe>
-        <a href="html/index.html">Home</a><br>
-        <a href="html/CS160.html">CS160</a>
+        <a href="index.html">Home</a><br>
+        <a href="CS160.html">CS160</a>
   </body>
   </html>
