--- a/html/CS160.html
+++ b/html/CS160.html
@@ -7,7 +7,7 @@
   </head>
   <body class="cs160">
     <div id="main" role="main">
-      <h1>Ivan Reams</h1>
+      <h1>CS160 Page</h1>
       <a href="index.html">Home</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a>
