--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -8,6 +8,6 @@
   <body class="game">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe>
         <a href="index.html">Home</a><br>
-        <a href="CS160.html">CS160</a>
+        <a href="CS160.html">CS160</a><br>
   </body>
   </html>
