--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -6,8 +6,9 @@
     <title>Ivan Reams</title>
   </head>
   <body class="game">
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe>
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe><br>
         <a href="index.html">Home</a><br>
-        <a href="CS160.html">CS160</a><br>
+        <a href="CS160.html">This is my first game</a><br>
+        <a href="shark.html">Sharks and Minnow</a>
   </body>
   </html>
