--- a/html/shark.html
+++ b/html/shark.html
@@ -7,8 +7,8 @@
   </head>
   <body class="shark">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250464143/?autostart=false" frameborder="0" allowfullscreen></iframe>    <br>
-    <a href="index.html">Home</a><br>
-    <a href="firstgame.html">This is my first game</a><br>
-    <a href="CS160.html">CS160</a><br>
+        <a href="index.html">Home</a><br>
+        <a href="firstgame.html">This is my first game</a><br>
+        <a href="CS160.html">Sharks and Minnow</a>
   </body>
 </html>    
