--- a/html/CS160.html
+++ b/html/CS160.html
@@ -10,7 +10,8 @@
       <h1>CS160 Page</h1>
       <a href="index.html">Home</a><br>
       <a href="firstgame.html">This is my first game</a><br>
-      <a href="shark.html">Sharks and Minnow</a>
+      <a href="shark.html">Sharks and Minnow</a><br>
+      <a href="ball.html">See a ball dodge blocks</a>
     </div>
   </body>
 </html>
