--- a/html/ball.html
+++ b/html/ball.html
@@ -5,11 +5,12 @@
     <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
-  <body class="shark">
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250464143/?autostart=false" frameborder="0" allowfullscreen></iframe>    <br>
+  <body class="ball">
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250672391/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    <br>
         <a href="index.html">Home</a><br>
         <a href="firstgame.html">This is my first game</a><br>
-        <a href="CS160.html">CS160</a>
-        <a href="ball.html">See a ball dodge blocks</a>
+        <a href="CS160.html">Sharks and Minnow</a><br>
+        <a href="shark.html">Sharks and Minnow</a>
   </body>
 </html>    
