--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -9,6 +9,7 @@
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe><br>
         <a href="index.html">Home</a><br>
         <a href="CS160.html">This is my first game</a><br>
-        <a href="shark.html">Sharks and Minnow</a>
+        <a href="shark.html">Sharks and Minnow</a> <br>
+        <a href="ball.html">See a ball dodge blocks</a>
   </body>
   </html>
