--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,8 @@
       <p>This is my index page!</p>
       <a href="CS160.html">CS160</a><br>
       <a href="firstgame.html">This is my first game</a><br>
-      <a href="shark.html">Sharks and Minnow</a>
+      <a href="shark.html">Sharks and Minnow</a><br>
+      <a href="ball.html">See a ball dodge blocks</a>
     </div>
   </body>
 </html>
