--- a/html/ball.html
+++ b/html/ball.html
@@ -10,7 +10,7 @@
     <br>
         <a href="index.html">Home</a><br>
         <a href="firstgame.html">This is my first game</a><br>
-        <a href="CS160.html">Sharks and Minnow</a><br>
+        <a href="CS160.html">CS160</a><br>
         <a href="shark.html">Sharks and Minnow</a>
   </body>
 </html>    
