--- a/html/shark.html
+++ b/html/shark.html
@@ -9,7 +9,7 @@
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250464143/?autostart=false" frameborder="0" allowfullscreen></iframe>    <br>
         <a href="index.html">Home</a><br>
         <a href="firstgame.html">This is my first game</a><br>
-        <a href="CS160.html">CS160</a>
+        <a href="CS160.html">CS160</a><br>
         <a href="ball.html">See a ball dodge blocks</a>
   </body>
 </html>    
