--- a/html/ball.html
+++ b/html/ball.html
@@ -8,6 +8,7 @@
   <body class="ball">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250672391/?autostart=false" frameborder="0" allowfullscreen></iframe>
     <br>
+        <a href="https://scratch.mit.edu/projects/250672391/">To the scratch page!</a> <br>
         <a href="index.html">Home</a><br>
         <a href="firstgame.html">This is my first game</a><br>
         <a href="CS160.html">CS160</a><br>
