--- a/html/shark.html
+++ b/html/shark.html
@@ -7,6 +7,7 @@
   </head>
   <body class="shark">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250464143/?autostart=false" frameborder="0" allowfullscreen></iframe>    <br>
+        <br><a href="https://scratch.mit.edu/projects/250464143/">To the scratch page!</a>
         <a href="index.html">Home</a><br>
         <a href="firstgame.html">This is my first game</a><br>
         <a href="CS160.html">CS160</a><br>
