correcting lay out

--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -7,7 +7,7 @@
   </head>
   <body class="game">
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe><br>
-        <br><a href="https://scratch.mit.edu/projects/248709136/">To the scratch page!</a>
+        <br><a href="https://scratch.mit.edu/projects/248709136/">To the scratch page!</a><br>
         <a href="index.html">Home</a><br>
         <a href="CS160.html">This is my first game</a><br>
         <a href="shark.html">Sharks and Minnow</a> <br>
