--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,8 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <p>This is my index page!</p>
+      <p>This is my index page!</p><br>
+      <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a><br>
       <a href="CS160.html">CS160</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
