--- a/html/CS160.html
+++ b/html/CS160.html
@@ -9,6 +9,7 @@
     <div id="main" role="main">
       <h1>CS160 Page</h1><br>
       <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a><br>
+      <a href="https://docs.google.com/document/d/1UpIhtntAq6JLaypH0IxqU70NqQm9bqB4XYT_RPcPW3A/edit?usp=sharing">Code Reading Answers</a><br>
       <a href="index.html">Home</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
