--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
       <h1>Ivan Reams</h1>
       <p>This is my index page!</p><br>
       <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a><br>
+      <a href="https://docs.google.com/document/d/1UpIhtntAq6JLaypH0IxqU70NqQm9bqB4XYT_RPcPW3A/edit?usp=sharing">Code Reading Answers</a><br>
       <a href="CS160.html">CS160</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
