added schools info

--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a>
+      <a href="college.html">Colleges I am looking into</a>
     </div>
   </body>
 </html>
