--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
       <a href="CS160.html">CS160</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
-      <a href="ball.html">See a ball dodge blocks</a>
+      <a href="ball.html">See a ball dodge blocks</a><br>
       <a href="college.html">Colleges I am looking into</a>
     </div>
   </body>
