upload app video

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a><br>
       <a href="college.html">Colleges I am looking into</a>
+      <a href="appvid.html">Check out my app</a>
     </div>
   </body>
 </html>
