--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a><br>
-      <a href="college.html">Colleges I am looking into</a>
+      <a href="college.html">Colleges I am looking into</a><br>
       <a href="appvid.html">Check out my app</a>
     </div>
   </body>
