added python page

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,8 @@
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a><br>
       <a href="college.html">Colleges I am looking into</a><br>
-      <a href="appvid.html">Check out my app</a>
+      <a href="appvid.html">Check out my app</a><br>
+      <a href="pie.html">Some Python</a>
     </div>
   </body>
 </html>
