--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,8 @@
       <a href="ball.html">See a ball dodge blocks</a><br>
       <a href="college.html">Colleges I am looking into</a><br>
       <a href="appvid.html">Check out my app</a><br>
-      <a href="pie.html">Some Python</a>
+      <a href="pie.html">Some Python</a><br>
+      <a href="../p5/empty-example/index.html">Check out some P5.js</a>
     </div>
   </body>
 </html>
