--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
       <a href="appvid.html">Check out my app</a><br>
       <a href="pie.html">Some Python</a><br>
       <a href="../p5/empty-example/index.html">Check out some P5.js</a>
+      <a href="../p5/Project2/index.html">Check out some P5.js</a>
     </div>
   </body>
 </html>
