--- a/html/index.html
+++ b/html/index.html
@@ -18,8 +18,8 @@
       <a href="college.html">Colleges I am looking into</a><br>
       <a href="appvid.html">Check out my app</a><br>
       <a href="pie.html">Some Python</a><br>
-      <a href="../p5/empty-example/index.html">Check out some P5.js</a>
-      <a href="../p5/Project2/index.html">Check out some P5.js</a>
+      <a href="../p5/empty-example/index.html">Check out some P5.js</a><br>
+      <a href="../p5/Project2/index.html">Check out some P5.js</a><br>
     </div>
   </body>
 </html>
