--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/firstgame.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
   <body class="game">
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="0" allowfullscreen></iframe><br>
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="3" allowfullscreen></iframe><br>
         <br><a href="https://scratch.mit.edu/projects/248709136/">To the scratch page!</a><br>
         <a href="index.html">Home</a><br>
-        <a href="CS160.html">This is my first game</a><br>
-        <a href="shark.html">Sharks and Minnow</a> <br>
-        <a href="ball.html">See a ball dodge blocks</a>
+
   </body>
   </html>
