--- a/html/ball.html
+++ b/html/ball.html
@@ -2,16 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/firstgame.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Ivan Reams</title>
   </head>
   <body class="ball">
+      <a href="index.html">Home</a><br><br>
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250672391/?autostart=false" frameborder="0" allowfullscreen></iframe>
     <br>
         <a href="https://scratch.mit.edu/projects/250672391/">To the scratch page!</a> <br>
-        <a href="index.html">Home</a><br>
-        <a href="firstgame.html">This is my first game</a><br>
-        <a href="CS160.html">CS160</a><br>
-        <a href="shark.html">Sharks and Minnow</a>
+       
   </body>
 </html>    
