--- a/html/firstgame.html
+++ b/html/firstgame.html
@@ -6,9 +6,10 @@
     <title>Ivan Reams</title>
   </head>
   <body class="game">
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="3" allowfullscreen></iframe><br>
+      <a href="index.html">Home</a><br><br>
+      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248709136/?autostart=false" frameborder="3" allowfullscreen></iframe><br>
         <br><a href="https://scratch.mit.edu/projects/248709136/">To the scratch page!</a><br>
-        <a href="index.html">Home</a><br>
+       
 
   </body>
   </html>
