--- a/html/CS160.html
+++ b/html/CS160.html
@@ -8,9 +8,7 @@
   <body class="cs160">
     <div id="main" role="main">
       <h1>CS160 Page</h1><br>
-      <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a><br>
-      <a href="https://docs.google.com/document/d/1UpIhtntAq6JLaypH0IxqU70NqQm9bqB4XYT_RPcPW3A/edit?usp=sharing">Code Reading Answers</a><br>
-      <a href="index.html">Home</a><br>
+      <a href="index.html">Homepage/a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a>
