--- a/html/CS160.html
+++ b/html/CS160.html
@@ -8,7 +8,7 @@
   <body class="cs160">
     <div id="main" role="main">
       <h1>CS160 Page</h1><br>
-      <a href="index.html">Homepage/a><br>
+      <a href="index.html">Homepage</a><br>
       <a href="firstgame.html">This is my first game</a><br>
       <a href="shark.html">Sharks and Minnow</a><br>
       <a href="ball.html">See a ball dodge blocks</a>
