--- a/html/college.html
+++ b/html/college.html
@@ -9,7 +9,8 @@
     <div id="main" role="main">
         <a href="index.html">Homepage</a><br>
      
-      <a href="https://docs.google.com/document/d/1iQP6NBJp4LQ0aT7PSgZ8ma3uFHXlTgUIlpgOXv40PtU/edit?usp=sharing">Here</a><p>is what little I have looked at for fours years.</p>
+      <p><a href="https://docs.google.com/document/d/1iQP6NBJp4LQ0aT7PSgZ8ma3uFHXlTgUIlpgOXv40PtU/edit?usp=sharing">
+         Here</a>is what little I have looked at for fours years.</p>
       <br>
       
 
