--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
        <li><a href="pie.html">Some Python</a></li>
        <li><a href="../p5/empty-example/index.html">Check out some P5.js</a></li>
        <li><a href="../p5/Project2/index.html">Check out some P5.js</a></li>
+       <li><a href="codehs.html">Some CodeHS</a></li>
     </ul>
   </div>
     
