--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <p>This is my index page!</p>
-      <a href="html/index.html">CS160</a><br>
+      <p>This is my first level</p>
+      <a href="html/index.html">CS160 Click Here!</a><br>
+      <a href="https://docs.google.com/document/d/1N0XC0btCCMqiGE_jv8_rDxydtbW_BkqFOPjxfp3-DrQ/edit?usp=sharing">
+      Rubric for week 6</a>
     </div>
   </body>
 </html>
