--- a/html/pie.html
+++ b/html/pie.html
@@ -10,8 +10,6 @@
       <h1>Ivan Reams</h1>
       <p>This is Python!</p><br>
       <a href="index.html">Home</a><br>
-      <iframe height="400px" width="100%" src="https://repl.it/@guardianzin/ShabbyOurDifferences?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-      <iframe height="400px" width="100%" src="https://repl.it/@guardianzin/MASTERMIND-GAME-NOAH-YOUNG?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-    </div>
+      <iframe height="400px" width="65%" src="https://repl.it/@guardianzin/MASTERMIND-GAME?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>    </div>
   </body>
 </html>
