--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
        <li><a href="../p5/empty-example/index.html">Check out some P5.js</a></li>
        <li><a href="../p5/Project2/index.html">Check out some P5.js</a></li>
        <li><a href="codehs.html">Some CodeHS</a></li>
+       <li><a href="../p5/test/index.html">js brick braker</a></li>
     </ul>
   </div>
     
