--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
        <li><a href="../p5/Project2/index.html">Check out some P5.js</a></li>
        <li><a href="codehs.html">Some CodeHS</a></li>
        <li><a href="../p5/test/index.html">js brick braker</a></li>
+       <li><a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a></li>
     </ul>
   </div>
     
