--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
        <li><a href="codehs.html">Some CodeHS</a></li>
        <li><a href="../p5/test/index.html">js brick braker</a></li>
        <li><a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a></li>
+       <li><a href="hangman.html">Hangman</a></li>
     </ul>
   </div>
     
