--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
        <li><a href="../p5/test/index.html">js brick braker</a></li>
        <li><a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a></li>
        <li><a href="hangman.html">Hangman</a></li>
+       <li><a href="https://docs.google.com/document/d/1iuvfuxsYsR6R9dxd3PuY5RisK_C1LIcPOWMWQhgyPYM/edit?usp=sharing">Circuit Videos</a></li>
     </ul>
   </div>
     
