--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link href="css/testrun.css" media="screen" rel="stylesheet" type="text/css" />
-    <!DOCTYPE html>
-    <html>
-    <head>
       <h1>Ivan's CS160</h1>
-    </head>
+  </head>
     <body>
     
  <div id="topnav">
@@ -28,7 +25,7 @@
        <li><a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a></li>
        <li><a href="hangman.html">Hangman</a></li>
        <li><a href="https://docs.google.com/document/d/1iuvfuxsYsR6R9dxd3PuY5RisK_C1LIcPOWMWQhgyPYM/edit?usp=sharing">Circuit Videos</a></li>
-       <li><a href="hws.html">Hardware Simulator</a></li>
+       <li><a href="hws.html">NadToTetris</a></li>
     </ul>
   </div>
     
