--- a/html/css/testnav2.html
+++ b/html/css/testnav2.html
@@ -8,7 +8,6 @@
     <body>
     
 <div class="sidenav">
-
     <button class="dropdown-btn">Google Doc 
         <i class="fa fa-caret-down"></i>
     </button>
@@ -16,43 +15,27 @@
         <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a>
         <a href="https://docs.google.com/document/d/1UpIhtntAq6JLaypH0IxqU70NqQm9bqB4XYT_RPcPW3A/edit?usp=sharing">Code Reading Answers</a>
         <a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a>
-        <a href="college.html">Colleges I am looking into</a>
-        <a href="https://docs.google.com/document/d/1-UFXO47mWCe1tPx1hFggyKp_eho7SJsqXv16k974w4U/edit?usp=sharing">Software is Hard</a>
-    </div>
-
-
-  <button class="dropdown-btn">Games 
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-container">
-    <a href="firstgame.html">This is my first game</a>
-    <a href="shark.html">Sharks and Minnow</a>
-    <a href="ball.html">See a ball dodge blocks</a>
-    <a href="hangman.html">Hangman</a>
-    <a href="../p5/test/index.html">js brick braker</a>
-  </div>
-
-  <button class="dropdown-btn">Python, p5j, other
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-container">
-      <a href="../p5/empty-example/index.html">Check out some P5.js</a>
-      <a href="codehs.html">Some CodeHS</a>
-      <a href="../p5/Project2/index.html">Check out another P5.js</a>
-      <a href="CS160.html">CS160</a>
-    </div>
-
-  <button class="dropdown-btn">Circuit, base10 
-      <i class="fa fa-caret-down"></i>
-  </button>
-    <div class="dropdown-container">
         <a href="https://docs.google.com/document/d/1iuvfuxsYsR6R9dxd3PuY5RisK_C1LIcPOWMWQhgyPYM/edit?usp=sharing">Circuit Videos</a>
-        <a href="https://docs.google.com/document/d/1H3Eyo0G2r528kygpaUE8zF8LpjgT-IK3ZXfg9HNSYN0/edit?usp=sharing">convert base10 and hex</a>
-        <a href="hws.html">NadToTetris</a>
-
-
+        <a href="college.html">Colleges I am looking into</a>
     </div>
-
+    <button class="dropdown-btn">Games 
+            <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-container"></div>
+        <a href="firstgame.html">This is my first game</a>
+        <a href="shark.html">Sharks and Minnow</a>
+        <a href="ball.html">See a ball dodge blocks</a>
+        <a href="hangman.html">Hangman</a>
+        <a href="../p5/test/index.html">js brick braker</a>
+        <a href="CS160.html">CS160</a>
+    </div>
+        <a href="appvid.html">Check out my app</a>
+        <a href="pie.html">Some Python</a>
+        <a href="../p5/empty-example/index.html">Check out some P5.js</a>
+        <a href="../p5/Project2/index.html">Check out some P5.js</a>
+        <a href="codehs.html">Some CodeHS</a>
+        <a href="hws.html">NadToTetris</a>
+    
   </div>
 
 <script>
