--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
         <a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a>
         <a href="college.html">Colleges I am looking into</a>
         <a href="https://docs.google.com/document/d/1-UFXO47mWCe1tPx1hFggyKp_eho7SJsqXv16k974w4U/edit?usp=sharing">Software is Hard</a>
+        <a href="https://docs.google.com/document/d/1tbG1bVnl8LNsFz3booGBTVe0Am5XsT_xtIfapMKwTeY/edit?usp=sharing">Robot Treasure Hunt </a>
     </div>
 
 
