--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
       <p>This is my first level</p>
+      <a href="https://docs.google.com/document/d/17KoljudLv2Nsagtc6Xj4XFdEXVJHfCX1SfDLryG0Eus/edit?usp=sharing">Final Rubric</a>
+      <a href="https://docs.google.com/document/d/1AZhyM9AL5-vE31vacnDDd4vfDbUjOc9GIfoVjmcOwvM/edit?usp=sharing">Final Refelections</a>
       <a href="html/index.html">CS160 Click Here!</a><br>
       <a href="https://docs.google.com/document/d/1N0XC0btCCMqiGE_jv8_rDxydtbW_BkqFOPjxfp3-DrQ/edit?usp=sharing">
       Rubric for week 6</a>
