--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
         <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-container">
+        <a href="https://docs.google.com/document/d/1AZhyM9AL5-vE31vacnDDd4vfDbUjOc9GIfoVjmcOwvM/edit?usp=sharing">Final Refelections</a>
         <a href="https://docs.google.com/document/d/1Z6Kfwg39Vb4Tv30qkrIcorrS16J87oPN7iXLEeyIiPw/edit?usp=sharing">Dreaming in Code Answers</a>
         <a href="https://docs.google.com/document/d/1UpIhtntAq6JLaypH0IxqU70NqQm9bqB4XYT_RPcPW3A/edit?usp=sharing">Code Reading Answers</a>
         <a href="https://docs.google.com/document/d/1r33rwnXDMen4RincbY18g8IxBRW3c_avVo5mLkh2I_c/edit?usp=sharing">Thoughts on balls of mud</a>
@@ -29,7 +30,6 @@
     <a href="firstgame.html">This is my first game</a>
     <a href="shark.html">Sharks and Minnow</a>
     <a href="ball.html">See a ball dodge blocks</a>
-    <a href="hangman.html">Hangman</a>
     <a href="../p5/test/index.html">js brick braker</a>
   </div>
 
@@ -37,9 +37,11 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-container">
-      <a href="../p5/empty-example/index.html">Check out some P5.js</a>
+      <a href="pie.html">Python games</a>
+      <a href="hangman.html">Hangman</a>
+      <a href="../p5/empty-example/index.html">B/W cirles P5.js!</a>
       <a href="codehs.html">Some CodeHS</a>
-      <a href="../p5/Project2/index.html">Check out another P5.js</a>
+      <a href="../p5/Project2/index.html">Crazy shape/colors P5.js</a>
       <a href="CS160.html">CS160</a>
     </div>
 
