--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ivan Reams</h1>
-      <p>This is my first level</p>
+      <p>This is my first level</p><br>
       <a href="https://docs.google.com/document/d/17KoljudLv2Nsagtc6Xj4XFdEXVJHfCX1SfDLryG0Eus/edit?usp=sharing">Final Rubric</a><br>
       <a href="https://docs.google.com/document/d/1WAIUzp8ab-TGwdKfcdvUBtslEKQftIuH5Ts8ohrOikM/edit">Final Refelections</a><br>
       <a href="html/index.html">CS160 Click Here!</a><br>
